Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).
TODO: unready_all
TODO: myhttpd header parsing
TODO: channel->maxsize(newsize)?

5.17  Sat Aug 22 23:09:31 CEST 2009
	- work around a bug in the perl debugger causing crashes
          when running under the debugger by marking _pool_handler as nodebug.
	- speed up Coro::async considerably.
        - try some hacks to get netbsd to work "more often" - their broken
          setjmp/longjmp, ucontext *and* phtreads are really hard on Coro.
        - convert Coro to AE 5.0 API.

5.162 Tue Jul 28 04:04:03 CEST 2009
	- perl 5.8.2 is now minimum requirement.
        - skip t/19_handle.t on broken windows perls.

5.161 Wed Jul 22 04:47:38 CEST 2009
	- Coro::AnyEvent::poll could have a different prototype when EV was
          used as backend (analyzed by Tatsuhiko Miyagawa).
	- Coro::AnyEvent errornously initialised the event loop when loaded,
          not on demand.
        - try to workaround rare */t/01_unblock.t failures.

5.16  Tue Jul 21 01:44:37 CEST 2009
	- Coro::AnyEvent failed to hook into the event loop
          when no threads had been readied between detecting
          the event loop and actually running it.
	- considerably speed up Coro::Select by taking avdantage
          of AnyEvent > 4.8 and some other optimisations.
        - implement paragraph readline mode in Coro::Handle
          (based on patches by Zsbán Ambrus).
        - replace WSAEINPROGRESS by WSAEWOULDBLOCK (reported
          and analyzed by Yasuhiro MATSUMOTO).
        - clarified libcoro license and copyright.
        - someone stole my EXTRA_META!!!
        - implement Coro::Select::patch_pp_sselect and it's brother,
          for hardcode select overriding.
